#7 Changed validation on login to get the whole info from the claims
